# plex-watcher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
src/: config.rs  main.rs  organizer.rs  parser.rs  plex.rs  processor.rs  tmdb.rs
