[package]
name = "plex-watcher"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "plex-watcher"
path = "src/main.rs"

[dependencies]
notify     = "8.2.0"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.13.3", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow     = "1"
regex      = "1"
once_cell  = "1"   # lazy-compiled static regexes
dotenvy = "0.15"

[profile.release]
opt-level = "z"     # optimise for binary size
lto = true
codegen-units = 1
strip = true        # strip debug symbols → smaller image
